fix FireFox placeHolder input (On firefox, the placeholder “Search by lable” and text input is crashing as showing in the below attachment)

--- a/app/public/content/css/main.scss
+++ b/app/public/content/css/main.scss
@@ -3314,3 +3314,8 @@ label.inactive {
 .dictionary-item-input::-ms-clear{
   display: none;
 }
+
+.dropdown-menu > li >.form-control{
+  padding:0;
+  text-align:center;
+}
